# OSCMessenger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: OSCMessenger.cpp  OSCMessenger.hpp  OSCMessenger.sc  OSCMessenger.schelp
